# stocks_quant_engine

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
data/: metadata.db
examples/: llm_event_intelligence_demo.py  run_demo.py  scoring_framework_demo.py
stock_screener_engine/: __init__.py  app.py
stock_screener_engine/backtest/: __init__.py  calibration.py  cross_sectional.py  event_study.py  walk_forward.py
stock_screener_engine/config/: defaults.yaml  settings.py  startup_validation.py
tests/: conftest.py  test_broker_optional.py  test_calibration.py  test_config.py  test_engine_pipeline.py  test_engine_regime_ml_overlay.py  test_explainability.py  test_features.py  test_financial_ingestion.py  test_financial_provider.py  test_http_client.py  test_live_invalidation.py  test_live_invalidation_daily_runner.py  test_live_invalidation_pipeline.py  test_llm_pipeline_fallback.py  test_llm_provider_adapters.py  test_llm_scoring_explainability.py  test_llm_validators.py  test_low_confidence_audit.py  test_ml_ranking.py  test_model_calibration_pipeline.py  test_modular_scoring.py  test_modular_signals.py  test_nlp_classification_extraction.py  test_nlp_ingestion.py  test_nlp_pipeline_integration.py  test_nlp_sentiment_aggregation.py  test_normalizers_v2.py  test_portfolio_adapter.py  test_regime_detection.py  test_scoring.py  test_short_signals.py  test_single_stock_pipeline.py  test_technical_indicators.py  test_universe.py
tools/: config_snapshot.py  run_calibration_report.py  run_live_invalidation_daily.py
(+122 files in other folders)
